Refactoring gradle build
