# api/swagger.yml
@@ -52,31 +52,6 @@ paths:
 #          description: "User successfully created"
         400:
           description: "Validation error"
-    delete:
-      tags:
-      - "skill"
-      summary: "Deletes a skill"
-      description: ""
-      operationId: "deleteSkill"
-      produces:
-      - "application/json"
-      parameters:
-      - name: "skillId"
-        in: "path"
-        description: "Skill id to delete"
-        required: true
-        type: "integer"
-        format: "int64"
-      responses:
-        200:
-          schema:
-            type: "array"
-            items:
-              $ref: "#/definitions/Skill"
-        400:
-          description: "Invalid ID supplied"
-        404:
-          description: "Skill not found"
     put:
       tags:
       - "skill"
@@ -130,24 +105,49 @@ paths:
           description: "Invalid ID supplied"
         404:
           description: "Skill not found"
-definitions:
-  Skill:
-    type: "object"
-    required:
-    - "name"
-    properties:
-      id:
+    delete:
+      tags:
+      - "skill"
+      summary: "Deletes a skill"
+      description: ""
+      operationId: "deleteSkill"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "skillId"
+        in: "path"
+        description: "Skill id to delete"
+        required: true
         type: "integer"
         format: "int64"
-      name:
-        type: "string"
-        example: "Java"
-      study:
-        type: "number"
-        format: "float"
-      progress:
-        type: "number"
-        format: "float"
+      responses:
+        200:
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Skill"
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Skill not found"
+definitions:
+  Skill:
+      type: "object"
+      required:
+      - "name"
+      properties:
+        id:
+          type: "integer"
+          format: "int64"
+        name:
+          type: "string"
+          example: "Java"
+        study:
+          type: "number"
+          format: "double"
+        progress:
+          type: "number"
+          format: "double"
 #  ListSkillResponse:
 #    type: "array"
 #    items:
